enclose timeout text in translation tag

--- a/portal/gil/templates/gil/base.html
+++ b/portal/gil/templates/gil/base.html
@@ -260,7 +260,7 @@
         <div class="modal-content box-modal">
           <div class="box-modal__inner"><a class="box-modal__close" data-dismiss="modal" aria-label="{{_('Close')}}"></a>
             <h4 class="box-modal__title">{{_("Session Expiration Warning")}}</h4>
-            <span class="box-modal__copy">{{_("Your session will expire in approximately ")}}</span><span class="box-modal__copy text-warning" id='remaining-time'></span>  {{ _("seconds due to inactivity.") }}
+            <span class="box-modal__copy" id="remaining-time"></span>
           </div>
            <div class="box-modal__footer">
             <button id="log-out" class="button button--teal" data-dismiss="modal">{{_("Log Out")}}</button>&nbsp;<button id="stay-logged-in" class="button button--teal" data-dismiss="modal">{{_("Stay Logged In")}}</button>
@@ -387,13 +387,14 @@
                     onwarning: function() {$("#session-warning-modal").modal("show"); if (sessMon.modalShown) sessMon.intervalMonitor = setInterval(function(){ sessMon.ontimeout() }, 2 * 60 * 1000);}
               });
               window.sessMon = sessMon;
-               // Configure the session timeout warning modal
+              var warningText = i18next.t("Your session will expired in approximately [time] seconds due to inactivity.".replace("[time]",(sessMon.timeBeforeWarning / 1000)));
               $("#session-warning-modal").modal({"backdrop": false,"keyboard": false,"show": false})
                       .on("show.bs.modal", function() { sessMon.modalShown = true})
                       .on("hide.bs.modal", function() { sessMon.modalShown = false; if (sessMon.intervalMonitor) clearInterval(sessMon.intervalMonitor); })
                       .on("click", "#stay-logged-in", sessMon.extendsess)
                       .on("click", "#log-out", sessMon.logout)
-                      .find("#remaining-time").text(sessMon.timeBeforeWarning / 1000);
+                      .find("#remaining-time").text(warningText);
+
           {% endif %}
 
           var __loader = function(show) {
