Implement https://jira.movember.com/browse/TN-375 org persistence can now be imported directly from admin's /settings page

--- a/portal/templates/settings.html
+++ b/portal/templates/settings.html
@@ -12,8 +12,10 @@
         {{ form.hidden_tag() }}
 
         {{ render_field(form.timeout, tabindex=5) }}
+        {{ render_field(form.import_orgs, tabindex=7) }}
 
-        <button type="submit" class="btn btn-tnth-primary">Save Settings</button>
+        {{ trace_data }}
+        <button type="submit" class="btn btn-tnth-primary">Submit</button>
     </form>
 
 
