add check for consented status

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1912,7 +1912,7 @@
                      * filtered out non-deleted items from all consents
                      */
                     var items = $.grep(dataArray, function(item) {
-                        return !item.deleted;
+                        return !item.deleted && item.status == "consented";
                     });
                     /*
                      * consent date in GMT
