--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -861,8 +861,12 @@ div.footer-wrapper.right-panel {
     float: left !important;
     max-width: 100%;
   }
+  th.id-field div.th-inner,
+  th.organization-field div.th-inner {
+    position: relative;
+    top: 0.2em;
+  }
 }
-
 #adminTable {
   min-height: 280px;
   transition: all 0.5s ease-in;
@@ -2761,6 +2765,13 @@ div.timezone-warning.text-warning {
 
   .fixed-table-toolbar .dropdown-menu {
     overflow-x: hidden;
+  }
+  .admin-table {
+      th.id-field div.th-inner,
+      th.organization-field div.th-inner {
+        position: relative;
+        top: -0.4em;
+      }
   }
   .tnth-form .form-group > label {
     font-size: @formSize;
