fix treatment date issue in chrome and safari on ipad, styling fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1609,6 +1609,9 @@ div.footer-wrapper.right-panel {
   td {
     padding-bottom: 0.2em;
   }
+  .list-cell, .descriptionCell {
+    padding-top: 0.2em;
+  }
 }
 #tnthproc {
   width: 100%;
@@ -1939,9 +1942,6 @@ input.clinic {
     background: none;
     margin-top: 1em;
     margin-bottom: 2em;
-    #procDateGroup .flex-item:last-of-type {
-      margin-top: 2em;
-    }
   }
   .profile-item-title {
     color: #777777;
@@ -3177,6 +3177,11 @@ div.timezone-warning.text-warning {
     .communications-container .flex-item {
         flex: 1 30%;
       }
+  }
+  #profileProcedureContainer {
+     .button-container {
+      margin-top: 2em;
+    }
   }
 }
 
