--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2490,7 +2490,7 @@ div.org-container {
     margin-left:0.5em;
   }
   .inner {
-    margin: 1em 0.5em 1em 0.5em
+    margin: 1em 0.5em
   }
   .procedureDateLabel {
     margin-bottom: 0;
@@ -2514,12 +2514,19 @@ div.org-container {
   #eventListLoad {
     display: none;
   }
+  .button-container {
+    margin-top: 2em;
+    margin-bottom: 1em;
+  }
 }
 #eventListtnthproc {
   margin-left: 0.5em;
   td {
     padding: 0.15em;
     line-height: 2.3em;
+  }
+  .list-cell, .descriptionCell {
+    padding-top: 0.4em;
   }
 }
 
