--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1849,9 +1849,9 @@
     };
     $(document).ready(function() {
 
-        var continueToAssessment = function(method, completionDate, linkUrl) {
+        var continueToAssessment = function(method, completionDate, instruments) {
             //check if the user has given web consent here, if not redirect to form
-            var assessment_url = linkUrl || {%if person.assessment_link%}"{{person.assessment_link|safe}}"{%else%}""{%endif%};
+            var assessment_url = {%if person.assessment_link%}"{{person.assessment_link|safe}}"{%else%}""{%endif%};
             if (hasValue(assessment_url)) {
                 var still_needed = false;
 
@@ -1873,6 +1873,10 @@
 
                 if (method === "paper") {
                     assessment_url += "&authored=" + tnthDates.formatDateString(completionDate, "iso-short");
+                };
+
+                if (hasValue(instruments)) {
+                    assessment_url += "&" + instruments;
                 };
 
                 var winLocation = !still_needed ? assessment_url : "{{url_for('eproms.website_consent_script', patient_id=person.id)}}" + "?entry_method=" + method + "&redirect_url=" + encodeURIComponent(assessment_url);
@@ -2051,6 +2055,7 @@
             if (method != "") {
                 $("#manualEntryMessageContainer").text("");
                 if (method === "paper") {
+
                     /*
                      * check questionnaire time windows
                      * disallow user to continue if the completion date is not in windows?
@@ -2093,16 +2098,12 @@
                                         };
                                     });
                                     instruments_string = instruments_list.join("&");
-                                    if (hasValue(instruments_string)) {
-                                        linkUrl = "{{url_for(
-                'assessment_engine_api.present_assessment')}}?subject_id={{person.id}}&" + instruments_string;
-                                    };
                                 };
-                                //console.log("link url: ", linkUrl)
+                                //console.log("instruments: ", instruments_string)
                                 /*
-                                 * assessment link url has format like: /api/present-assessment?subject_id=29&instument_id=epic26&instument_id=eproms_add&instument_id=comorb
+                                 * passed along instruments for the current questionnaire bank
                                  */
-                                continueToAssessment(method, completionDate, linkUrl);
+                                continueToAssessment(method, completionDate, instruments_string);
                             };
 
                         };
