--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -2104,7 +2104,7 @@
                                          */
                                         qs.forEach(function(item) {
                                             if (item.questionnaire) {
-                                                instruments_list.push("instument_id="+item.questionnaire.display);
+                                                instruments_list.push("instrument_id="+item.questionnaire.display);
                                             };
                                         });
                                         instruments_string = instruments_list.join("&");
