--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -38,7 +38,7 @@
                 <th data-field="lastname" data-sortable="true" data-filter-control="input">{{ _("Last Name") }}</th>
                 <th data-field="email" data-sortable="true" class="email-data-field" data-filter-control="input">{{ _("Email") }}</th>
                 <th data-field="organization" data-sortable="true" class="org-data-field" data-filter-control="select">{{ _("Site(s)") }}</th>
-                <th class="text-center"><em>{{ _("Delete") }}</em> {{ _("User") }}</span></th>
+                <th class="text-center"><em>{{ _("Deactivate") }}</em> {{ _("User") }}</span></th>
             </tr>
             </thead>
             <tbody data-link="row" class="rowlink">
@@ -56,7 +56,7 @@
                   <td>{{ user.last_name if user.last_name }}</td>
                   <td class="email-data-field">{{ user.email if user.email }}</td>
                   <td class="org-data-field">{% for org in user.organizations | sort(attribute='id') %}<span class="medium-text">{{org.name}}</span><br/>{% endfor %}</td>
-                  <td class="text-center deleted-button-cell">{%if not user.deleted %}<button onclick="AT.deleteUser(event, '{{user.id}}')" type="button" class="btn btn-default"><em>Delete</em></button>{%else%}{{ _("Inactive") }}{%endif%}</td>
+                  <td class="text-center deleted-button-cell">{%if not user.deleted %}<button onclick="AT.deleteUser(event, '{{user.id}}')" type="button" class="btn btn-default"><em>Deactivate</em></button>{%else%}{{ _("Inactive") }}{%endif%}</td>
               </tr>
             {% endfor %}
             </tbody>
