TN-140 initial queries buttons styling fixes, and also JS refactor

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -650,6 +650,9 @@ div.footer-wrapper.right-panel {
     position: relative;
     text-align: center;
   }
+  #buttonsContainer.continue {
+    margin: 1em auto;
+  }
   #next {
     opacity: 0;
     position: absolute;
@@ -3092,6 +3095,10 @@ div.timezone-warning.text-warning {
         font-size: @subheadSize;
       }
     }
+  }
+
+  #aboutForm.full-size {
+    max-width: 100%;
   }
 
   #profileConsentHistory {
