--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -105,32 +105,6 @@ var fc = new window.FieldsChecker("{{user.id}}",
                             });
 
 $(document).ready(function(){
-
-  $('#queriesForm').validator().on('submit', function (e) {
-      if (e.isDefaultPrevented()) {
-        alert("There's a problem with your submission. Please check your answers, then try again.  Make sure all required fields are completed and valid.");
-      } else {
-        $("#updateProfile").hide();
-        $("#next").hide();
-        $(".loading-message-indicator").show();
-        setTimeout("assembleContent.demo({{ user.id }},null, null, true);", 250);
-      };
-  });
-
-  /*** event for the next button ***/
-  $("#next").on("click", function() {
-      $(this).hide();
-      $(".loading-message-indicator").show();
-      setTimeout(function() { window.location.reload(); }, 100);
-  });
-
-  /*** event for the arrow in the header**/
-  $("div.heading").on("click", function() {
-     $('html, body').animate({
-        scrollTop: $(this).next('div.content-body').children().first().offset().top
-     }, 1000);
-  });
-
   /*
    * the flow here :
    * get still needed core data
@@ -147,7 +121,10 @@ $(document).ready(function(){
         var elapsedTime = fc.endTime - fc.startTime;
         elapsedTime /= 1000;
         if (fc.sectionsLoaded() || elapsedTime >= 3) {
-            setTimeout(function() { fc.initIncompleteFields(); }, 300);
+            setTimeout(function() {
+              fc.initIncompleteFields();
+              fc.onIncompleteFieldsDidInit();
+            }, 300);
             fc.startTime = 0;
             fc.endTime = 0;
             clearInterval(fc.intervalId);
